# TextEditorProject

./: .gitignore  CMakeLists.txt  README.md
include/: rendering.h
src/: main.cpp  rendering.cpp
